--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -11,19 +11,23 @@ body {
     background-color: #fff9ea;
 }
 
+session {
+    padding: 10px 10%;
+}
+
 .btn-default {
     
     display: flex;
     align-items: center;
     vertical-align: center;
     justify-content: center;
-    background-color: #1f5014;
+    background-color: #fff9ea;
     border: none;
     height: 40px;
     border-radius: 12px;
     padding: 10px 14px;
     font-weight: 600;
-    color: #cbddd1;
+    color: #457d58;
     box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.2);
     transition: background-color .3s ease;
 }
